fix(zh-CN): 将“发布于”字段的翻译更新为“更新于”以更准确地反映内容状态

--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -32,7 +32,7 @@ meta:
   back_to_top: 回到顶部
   more: 更多
   created_author: 本文由 %s 发布于
-  created: 发布于
+  created: 更新于
   updated: 更新于
   license: 许可协议
   share: 分享文章
